--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 }
 
 .conteudo-senha {
+    margin-top: 80px; 
     background: var(--fundo-senha);
     padding: 24px;
     border-bottom: 6px solid var(--borda);
@@ -50,4 +51,8 @@ body {
 
 #campo-senha:focus {
     outline: none;
+}
+.conteudo{
+    max-width: 1200px;
+    margin: 0 auto;
 }
