--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .conteudo-senha {
-    margin-top: 80px; 
+    margin-top: 80px;
     background: var(--fundo-senha);
     padding: 24px;
     border-bottom: 6px solid var(--borda);
@@ -47,12 +47,42 @@ body {
     color: var(--branco);
     font-family: var(--roboto-mono);
     font-size: 40px;
+    width: 70%;
 }
 
 #campo-senha:focus {
     outline: none;
 }
-.conteudo{
+
+.conteudo {
     max-width: 1200px;
     margin: 0 auto;
 }
+.parametro{
+    background-color: var(--fundo-texto);
+    border: 2px solid var(--borda);
+    margin-top: 32px;
+    padding: 24px;
+}
+.parametro-titulo{
+    font-family: var(--roboto-mono);
+    font-size: 28px;
+}
+.parametro-senha__titulo{
+    font-size:24px;
+}
+.parametro-coluna__senha{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+@media screen and (min-width: 768px) {
+    .parametro-coluna__senha{
+        flex-direction: row;
+    }
+}
+.parametro-senha{
+    width: 50%;
+    margin: 0 auto;
+}
+
