--- a/style.css
+++ b/style.css
@@ -99,3 +99,19 @@ body {
     height: 20px;
     cursor: pointer;
 }
+.fraca{
+    width: 25%;
+    background-color: #E71B32; 
+}
+.parametro-senha-textos{
+    display: flex;
+    justify-content: space-between;
+}
+.media{
+    background-color: #FAF408;
+    width: 50%;
+}
+.forte{
+    background-color: #00FF85;
+    width: 100%;
+}
