--- a/style.css
+++ b/style.css
@@ -80,19 +80,17 @@ body {
     flex-direction: column;
     justify-content: center;
 }
-
 .parametro-senha {
     width: 50%;
     margin: 0 auto;
 }
 
-@media screen and (min-width: 768px) {
-    .parametro-coluna__senha {
-        flex-direction: row;
-    }
+.parametro-senha-botoes{
+    display: flex;
+    justify-content: center;
 }
 
-.parametro-senha__botao {
+.parametro-senha__botao{
     background-color: var(--fundo-texto);
     color: var(--branco);
     border: 2px solid var(--borda);
@@ -100,29 +98,55 @@ body {
     font-size: 24px;
     cursor: pointer;
 }
+.parametro-senha__texto{
+    padding: 24px;
+    border-top: 2px solid var(--borda);
+    border-bottom: 2px solid var(--borda);
+    margin: 0;
+    font-size: 24px;
+}
 
-.checkbox {
+label{
+    font-size: 20px;
+}
+
+.checkbox{
     width: 20px;
     height: 20px;
     cursor: pointer;
 }
 
-.fraca {
+.barra{
+    background-color: var(--fundo-senha);
+    height: 30px;
+    width: 100%;
+}
+.forca{
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
+.fraca{
     width: 25%;
-    background-color: #E71B32;
+    background-color: #E71B32; 
+}
+.media{
+    background-color: #FAF408;
+    width: 50%;
+}
+.forte{
+    background-color: #00FF85;
+    width: 100%;
 }
 
-.parametro-senha-textos {
+.parametro-senha-textos{
     display: flex;
     justify-content: space-between;
 }
 
-.media {
-    background-color: #FAF408;
-    width: 50%;
-}
 
-.forte {
-    background-color: #00FF85;
-    width: 100%;
+@media screen and (min-width: 768px) {
+    .parametro-coluna__senha{
+        flex-direction: row;
+    }
 }
